swagger changes for delete apis
