# handlers/deleteHandlers.go
@@ -18,13 +18,13 @@ import (
 //	@ID				user-meal-delete
 //	@Accept			json
 //	@Produce		json
-// @Param request body models.MealType true "The input for delete meal"
+// @Param   mealtype     query     string     true  "mealtype for which want to delete details"     example("breakfast")
 //	@Success		200				string		"User details Successfully deleted"
 //	@Failure		498		{object}	models.Message	"Invalid token"
 //	@Failure		400		{object}	models.Message	"Invalid data"
 //	@Failure		409		{object}	models.Message	"This record contains duplicated data that conflicts with what is already in the database"
 //	@Failure		500		{object}	models.Message	"Internal server error"
-//	@Router			/user/meal/ [delete]
+//	@Router			/user/meal [delete]
 func DeleteMealDetails(w http.ResponseWriter, r *http.Request) {
 	var mealType models.MealType
 	mealType.MealType = r.FormValue("mealtype")
@@ -57,13 +57,13 @@ func DeleteMealDetails(w http.ResponseWriter, r *http.Request) {
 //	@ID				user-exercise-delete
 //	@Accept			json
 //	@Produce		json
-// @Param request body models.ExerciseType true "The input for delete exercise"
+// @Param   exercisetype     query     string     true  "exercisetype for which want to delete details"     example("weight_lifting")
 //	@Success		200				string		"User details Successfully deleted"
 //	@Failure		498		{object}	models.Message	"Invalid token"
 //	@Failure		400		{object}	models.Message	"Invalid data"
 //	@Failure		409		{object}	models.Message	"This record contains duplicated data that conflicts with what is already in the database"
 //	@Failure		500		{object}	models.Message	"Internal server error"
-//	@Router			/user/exercise/ [delete]
+//	@Router			/user/exercise [delete]
 func DeleteExerciseDetails(w http.ResponseWriter, r *http.Request) {
 	var exerciseType models.ExerciseType
 	exerciseType.ExerciseType = r.FormValue("exercisetype")
@@ -102,7 +102,7 @@ func DeleteExerciseDetails(w http.ResponseWriter, r *http.Request) {
 //	@Failure		400		{object}	models.Message	"Invalid data"
 //	@Failure		409		{object}	models.Message	"This record contains duplicated data that conflicts with what is already in the database"
 //	@Failure		500		{object}	models.Message	"Internal server error"
-//	@Router			/user/weight/ [delete]
+//	@Router			/user/weight [delete]
 func DeleteWeightDetails(w http.ResponseWriter, r *http.Request) {
 	var RowsAffected int64
 	RowsAffected, err = dal.MustExec("DELETE FROM public.weight_details WHERE user_id=$1 AND date=$2 ;", UserID.UserID, time.Now().Format("2006-01-02"))
@@ -132,7 +132,7 @@ func DeleteWeightDetails(w http.ResponseWriter, r *http.Request) {
 //	@Failure		400		{object}	models.Message	"Invalid data"
 //	@Failure		409		{object}	models.Message	"This record contains duplicated data that conflicts with what is already in the database"
 //	@Failure		500		{object}	models.Message	"Internal server error"
-//	@Router			/user/water/ [delete]
+//	@Router			/user/water [delete]
 func DeleteWaterDetails(w http.ResponseWriter, r *http.Request) {
 	var RowsAffected int64
 	RowsAffected, err = dal.MustExec("DELETE FROM public.water_details WHERE user_id=$1 AND date=$2 ;", UserID.UserID, time.Now().Format("2006-01-02"))
